--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Claire Froelich",
   "license": "MIT",
   "scripts": {
-    "server:dev": "yarn workspace server dev"
+    "server:dev": "yarn workspace server dev",
+    "dev": "yarn server:dev"
   },
   "workspaces": {
     "packages": [
