--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "dotenv": "10.0.0",
     "express": "4.17.1"
   },
   "devDependencies": {
@@ -17,7 +18,7 @@
     "@typescript-eslint/parser": "5.3.1",
     "eslint": "8.2.0",
     "nodemon": "2.0.15",
-    "ts-node": "10.4.0",
+    "ts-node-dev": "1.1.8",
     "typescript": "4.4.4"
   }
 }
